# c-sdl2-tictactoe

./: .gitignore  README.md
c-sdl2-tictactoe/: CMakeLists.txt
c-sdl2-tictactoe/include/: board.h  endmenu.h  engine.h  internal.h  menu.h  shape.h  tictactoe.h  util.h
c-sdl2-tictactoe/src/: board.c  endmenu.c  engine.c  main.c  menu.c  shape.c  tictactoe.c  util.c
c-sdl2-tiktaktoe/: CMakeLists.txt
c-sdl2-tiktaktoe/img/odg/: 0_menu_none.odg  1_menu_1vs1.odg  2_menu_1vsCOM.odg  3_menu_quit.odg  4_board.odg
c-sdl2-tiktaktoe/include/: board.h  color.h  engine.h  internal.h  menu.h  shape.h  tictactoe.h  tictactoe_ctx.h  tictactoe_events.h  tictactoe_gui.h  tiktaktoe_ctx.h
c-sdl2-tiktaktoe/src/: board.c  color.c  engine.c  main.c  menu.c  shape.c  tictactoe.c  tictactoe_ctx.c  tictactoe_events.c  tictactoe_gui.c
